<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dream_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dream_header"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            tools:text="Dream" />

        <EditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dream_title_hint"
            android:inputType="none"
            android:minHeight="48dp"
            tools:text="Dream Title"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/last_updated_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="Last updated date at time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fulfilled_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fulfilled_checkbox"
                tools:text="Fulfilled" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/deferred_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deferred_checkbox"
                tools:text="Deferred" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entries_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entries_header"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            tools:text="Entries" />

        <Button
            android:id="@+id/entry_0_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/entry_0_button"
            android:textAlignment="center"
            tools:ignore="VisualLintButtonSize"
            tools:text="Button 0" />

        <Button
            android:id="@+id/entry_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/entry_1_button"
            android:textAlignment="center"
            tools:ignore="VisualLintButtonSize"
            tools:text="Button 1" />

        <Button
            android:id="@+id/entry_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/entry_2_button"
            android:textAlignment="center"
            tools:ignore="VisualLintButtonSize"
            tools:text="Button 2" />

        <Button
            android:id="@+id/entry_3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/entry_3_button"
            android:textAlignment="center"
            tools:ignore="VisualLintButtonSize"
            tools:text="Button 3" />

        <Button
            android:id="@+id/entry_4_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/entry_4_button"
            android:textAlignment="center"
            tools:ignore="VisualLintButtonSize"
            tools:text="Button 4" />

    </LinearLayout>

</LinearLayout>